--- a/Homework_3/style.css
+++ b/Homework_3/style.css
@@ -58,8 +58,9 @@
 }
 
 .top__buton__text {
+    text-decoration: none;
     color: #AAA;
-    text-decoration: None;
+    font-size: 15px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
